soketi/scale-with-nats/templates/soketi/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: soketi
  name: soketi
  annotations:
    cloud.google.com/backend-config: '{"default": "websocket"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: soketi-server
  ports:
    - name: http
      protocol: TCP
      port: 6001
      targetPort: 6001
